Added file appender to property file and changed gitignore to ignore log files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,7 +50,7 @@ logging.level=DEBUG
 #logging.datePattern=yyyy-MM-dd'T'HH:mm:ss.SSSZ
 
 # The log appenders (optional. Default: com.esv.utile.logging.core.appender.RollingLogAppender) See also: com.esv.utile.logging.core.appender.ConsoleLogAppender
-logging.appenders=com.esv.utile.logging.core.appender.ConsoleLogAppender
+logging.appenders=com.esv.utile.logging.core.appender.RollingLogAppender,com.esv.utile.logging.core.appender.ConsoleLogAppender
 
 # The time waiting to consume the enqueued LogEvents. *IN MILLISECONDS* (optional. Default value: 100). The minimal time wait value is 100ms
 #logging.async.logEventTimeWait=100
